--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/toolpad-core": "^0.1.51",
     "@toolpad/core": "^0.11.0",
     "cra-template": "1.2.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
