finishing all features

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/toolpad-core": "^0.1.51",
-    "@toolpad/core": "^0.11.0",
-    "lottie-react": "^2.4.0",
-    "lucide-react": "^0.469.0",
     "@react-oauth/google": "^0.12.1",
+    "@toolpad/core": "^0.11.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.469.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.0.0",
